[gd_scene load_steps=17 format=2]

[ext_resource path="res://Axl_mod/SFX/copy_bullet.wav" type="AudioStream" id=1]
[ext_resource path="res://Axl_mod/Player/Projectiles/CopyBulletAxl.gd" type="Script" id=2]
[ext_resource path="res://Axl_mod/Player/Projectiles/Copy_Bullet.png" type="Texture" id=3]
[ext_resource path="res://src/Sounds/MEDIUM_SHOT2.wav" type="AudioStream" id=4]
[ext_resource path="res://src/Effects/Basic Hit.tscn" type="PackedScene" id=5]
[ext_resource path="res://SpriteEffect.gd" type="Script" id=6]
[ext_resource path="res://Axl_mod/Player/Projectiles/copy_deflect.png" type="Texture" id=7]
[ext_resource path="res://src/Effects/Materials/buster_icarus_particles.tres" type="Material" id=8]
[ext_resource path="res://src/Levels/Primrose/rotation_disabler.gd" type="Script" id=9]
[ext_resource path="res://Axl_mod/Player/Projectiles/BulletAxl_Start.png" type="Texture" id=10]

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "Tag",
"speed": 20.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[node name="Copy Bullet" type="KinematicBody2D" groups=["Player Projectile"]]
z_index = 6
collision_layer = 4
collision_mask = 0
script = ExtResource( 2 )
damage = 2.0
damage_to_bosses = 2.0
damage_to_weakness = 4.0
horizontal_velocity = 150.0
vertical_velocity = 150.0
fire_sound = ExtResource( 1 )

[node name="animatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 6 )
animation = "Tag"
frame = 2
playing = true

[node name="collisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="visibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false
position = Vector2( -3, -2.98023e-07 )
scale = Vector2( 1, 0.3 )

[node name="particles2D" type="Particles2D" parent="."]
visible = false
position = Vector2( 10, 0 )
amount = 4
lifetime = 0.54
local_coords = false
process_material = ExtResource( 8 )

[node name="audioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
pause_mode = 2
stream = ExtResource( 4 )
volume_db = -9.109
pitch_scale = 1.08
bus = "SFX"

[node name="Start Particle" parent="." instance=ExtResource( 5 )]
z_index = 1
texture = ExtResource( 10 )
vframes = 1
animation_speed = 100.0
vertical_flip_chance = 0.0

[node name="disabler" type="Node" parent="Start Particle"]
script = ExtResource( 9 )
fade_out = true
delete_after_fade = true
queue_free = true
undo_on_rotation_end = false

[node name="Hit Particle" parent="." instance=ExtResource( 5 )]
texture = ExtResource( 7 )
vertical_flip_chance = 0.0

[node name="disabler" type="Node" parent="Hit Particle"]
script = ExtResource( 9 )
fade_out = true
delete_after_fade = true
queue_free = true
undo_on_rotation_end = false

[node name="deflect_particle" type="Sprite" parent="."]
visible = false
z_index = 4
z_as_relative = false
texture = ExtResource( 7 )
hframes = 2
vframes = 2
script = ExtResource( 6 )
animation_speed = 32.0
one_shot = true

[node name="disabler" type="Node" parent="deflect_particle"]
script = ExtResource( 9 )
fade_out = true
delete_after_fade = true
queue_free = true
undo_on_rotation_end = false

[node name="disabler" type="Node" parent="."]
script = ExtResource( 9 )
fade_out = true
delete_after_fade = true
undo_on_rotation_end = false
